--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,15 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 1em;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #eb2f06;
+  width: 0.5em;
+}
+
 a {
   color: inherit;
   text-decoration: none;
